{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 10,
  "lineage": "d1210a27-051f-825d-97b8-5ac0cd01311d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0633fb238d7de0f95",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-0d955d5cbdd576d33",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d955d5cbdd576d33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c638a68f7c1ac05f",
            "private_dns": "ip-10-222-0-74.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.74",
            "public_dns": "ec2-15-165-75-161.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.75.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051812b45b48f25c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb4f958ab81e94ab",
            "tags": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "seank03"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "seank03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d420e96c92d27077"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0633fb238d7de0f95",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-0f91308475f1c7cf7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f91308475f1c7cf7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0979cf582506a2a13",
            "private_dns": "ip-10-222-0-116.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.116",
            "public_dns": "ec2-3-38-151-215.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.151.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5d84ed13ca77e9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb4f958ab81e94ab",
            "tags": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "seank03"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-amazon-linux-2",
              "Project": "seank03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d420e96c92d27077"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f869ae259b6bc98",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-0eca85c9e65f9b726",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eca85c9e65f9b726",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4d90ab143ba28c1",
            "private_dns": "ip-10-222-0-150.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.150",
            "public_dns": "ec2-15-165-18-186.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.18.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4644f7bf21f8012",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb4f958ab81e94ab",
            "tags": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "seank03"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "seank03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d420e96c92d27077"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f869ae259b6bc98",
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:instance/i-008810d87ee8edf39",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008810d87ee8edf39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-ezcmc1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013c0046eed2cb5cd",
            "private_dns": "ip-10-222-0-121.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.121",
            "public_dns": "ec2-3-39-235-183.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.235.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb0aa1bf0d00a30e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb4f958ab81e94ab",
            "tags": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "seank03"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ubuntu",
              "Project": "seank03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d420e96c92d27077"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:security-group/sg-0d420e96c92d27077",
            "description": "Security Group for SSH.",
            "egress": [],
            "id": "sg-0d420e96c92d27077",
            "ingress": [],
            "name": "apne2-fastcampus-ssh",
            "name_prefix": "",
            "owner_id": "755233231675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apne2-fastcampus-ssh",
              "Project": "seank03",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-ssh",
              "Project": "seank03",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-fastcampus-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb9a85955bfdff9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-691436011",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d420e96c92d27077",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 80,
            "id": "sgrule-1115373873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d420e96c92d27077",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-4109442180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d420e96c92d27077",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}